--- a/styles/globals.css
+++ b/styles/globals.css
@@ -80,3 +80,17 @@ display: none;
   .control-dots{
 display: none;
   }
+
+
+  li > ul {
+    transform: translatex(100%) scale(0);
+  }
+  li:hover > ul {
+    transform: translatex(101%) scale(1);
+  }
+  li > button svg {
+    transform: rotate(-90deg);
+  }
+  /* li:hover > button svg {
+    transform: rotate(-270deg);
+  } */
