--- a/styles/globals.css
+++ b/styles/globals.css
@@ -136,11 +136,21 @@ li > button svg {
   justify-content: center;
 }
 
-
-.overlay{
+.overlay {
   /* overflow: overlay; */
 }
 .stripe-field {
+  margin-top: 3px;
+  margin-bottom: 15px;
 }
 .StripeElement {
+  margin-bottom: 10px;
+  padding: 14.41px 10px;
+  height: 50px;
+  outline: none;
+  border-radius: 3px;
+  box-shadow: none;
+  border: 1px solid red;
+  &:focus {
+  }
 }
