--- a/styles/globals.css
+++ b/styles/globals.css
@@ -154,3 +154,28 @@ li > button svg {
   &:focus {
   }
 }
+.overlay::-webkit-scrollbar {
+  width: 1px;  
+  height: 4px;     
+  
+            /* width of the entire scrollbar */
+}
+.overlay::-webkit-scrollbar-track {
+       
+  width: 2px;
+  
+}
+.overlay::-webkit-scrollbar-thumb {
+  background-color: gray;    /* color of the scroll thumb */
+  border-radius: 10px;   
+  width: 1px;    /* roundness of the scroll thumb */
+   /* creates padding around scroll thumb */
+}
+body{
+  -webkit-touch-callout: none; /* Disable callout on iOS */
+  -webkit-user-select: none; /* Disable selection on iOS */
+  -khtml-user-select: none; /* Disable selection on old Konqueror browsers */
+  -moz-user-select: none; /* Disable selection on Firefox */
+  -ms-user-select: none; /* Disable selection on Internet Explorer */
+  user-select: none; /* Disable selection on modern browsers */
+}
