--- a/styles/globals.css
+++ b/styles/globals.css
@@ -192,6 +192,24 @@ height: 100%;
   box-shadow: none;
   border: 1px solid red !important;
   border-radius: 0.375rem;
-  &:focus {
-  }
+}
+
+.scrool-adjust::-webkit-scrollbar {
+  width: 5px;
+  height: 20px;
+}
+
+.scrool-adjust::-webkit-scrollbar-track {
+  /* border-radius: 100vh; */
+  /* background: #f7f4ed; */
+}
+
+.scrool-adjust::-webkit-scrollbar-thumb {
+  background: #ece7e7;
+  border-radius: 100vh;
+  /* border: 3px solid #f6f7ed; */
+}
+
+.scrool-adjust::-webkit-scrollbar-thumb:hover {
+  background: #c0a0b9;
 }
