--- a/styles/globals.css
+++ b/styles/globals.css
@@ -210,6 +210,6 @@ height: 100%;
   /* border: 3px solid #f6f7ed; */
 }
 
-.scrool-adjust::-webkit-scrollbar-thumb:hover {
-  background: #c0a0b9;
+.change-bg {
+  background-color: rgb(0 0 0/1) !important;
 }
