--- a/styles/globals.css
+++ b/styles/globals.css
@@ -109,9 +109,9 @@ li > button svg {
   justify-content: center;
 }
 
-.overlay {
+/* .overlay {
   /* overflow: overlay; */
-}
+/* } */ 
 .stripe-field {
   margin-top: 3px;
   margin-bottom: 15px;
@@ -170,10 +170,10 @@ height: 100%;
   height: 20px;
 }
 
-.scrool-adjust::-webkit-scrollbar-track {
+/* .scrool-adjust::-webkit-scrollbar-track {
   /* border-radius: 100vh; */
   /* background: #f7f4ed; */
-}
+/* } */
 
 .scrool-adjust::-webkit-scrollbar-thumb {
   background: #ece7e7;
@@ -183,4 +183,16 @@ height: 100%;
 
 .change-bg {
   background-color: rgb(0 0 0/1) !important;
+}
+/* .btn4 span{
+  transform: translateX(-10%);
+  transition: transform .2s ease-in
+}
+
+.btn4:hover span{
+  transform: translateX(0)
+} */
+.fill:hover,
+.fill:focus {
+  box-shadow: inset 0 0 0 2em var(--hover);
 }
